# company-research-agent

./: .env.example  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  DECISIONS.md  README.md  RELEASE_NOTES_v1.0.0.md  SESSION.md  cc  commitlint.config.js  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: gold-annotator.md  redteam-runner.md
.claude/commands/: close-session.md  cost.md  eval.md  redteam.md  research.md  trace.md
.github/workflows/: evals.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py
backend/app/agent/: __init__.py  loop.py  run.py
backend/app/dossier/: __init__.py  dossier.schema.json  models.py
backend/app/evals/: __init__.py  runner.py
backend/app/guardrails/: __init__.py  classifier.py  injection.py
backend/app/observability/: __init__.py  tracer.py
backend/app/redteam/: __init__.py  payloads.py  run.py  runner.py
backend/app/serving/: __init__.py  main.py
backend/app/tools/: __init__.py  client.py  inventory.py
backend/tests/: conftest.py  test_classifier.py  test_dossier_schema.py  test_guardrails.py  test_health.py  test_injection.py  test_loop.py  test_redteam.py  test_tools_inventory.py
backend/tests/evals/: test_eval_runner.py
docs/adr/: ADR-001-stack.md  (+12 more)
evals/: gold.jsonl
prompts/: system_prompt_v1.md
scripts/: metrics.py
security/: red-team-checklist.md
specs/: 01-dossier-schema.md  02-tools.md  03-tool-use-loop.md  04-guardrails.md  05-structured-output.md  06-serving-metrics.md  07-evals-ci-gate.md  08-gold-dataset.md  09-security-redteam.md
(+39 files in other folders)
