[project]
name = "company-research-agent"
version = "0.1.0"
description = "Financial research agent with tool use that returns a structured, citable dossier."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.49",
    "fastapi>=0.115",
    "langfuse>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "slowapi>=0.1",
    "tenacity>=8.2",
    "uvicorn[standard]>=0.32",
    "yfinance>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
